fixed text align

--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -91,7 +91,7 @@ h6 {
 }
 
 p {
-  margin: 10px 0 15px 0; padding: 0px 10px;
+  margin: 10px 0 15px 0; padding: 0px 10px; text-align: justify;
 }
 
 footer p {
